Heading tweaks for accessibility

--- a/css/community-plans.css
+++ b/css/community-plans.css
@@ -112,7 +112,7 @@ header#header {
 div#main {
     padding-top:0 !important;
 }
-.panel-col-top h2.pane-title {
+.panel-col-top .pane-title {
     font-size:48px;
     line-height:1.2em;
     padding:1em 0;
@@ -184,7 +184,7 @@ h4 {
     margin-top: 3em;
 }
 
-.fr_page h2 {
+.fr_page h2, .fr_page h1 {
     font-family: "Droid Serif", serif;
     border-bottom: 1px solid #ccc;
     padding: 0 0 25px 0;
@@ -603,7 +603,7 @@ ul.fr_pagination {
         width: 50.25%;
     }
 
-    .panel-col-top h2.pane-title {
+    .panel-col-top .pane-title {
         font-size: 36px;
         line-height: 1.35em;
     }
@@ -661,7 +661,7 @@ ul.fr_pagination {
     .panel-col-top .inside {
         width: 60.25%;
     }
-    .panel-col-top h2.pane-title {
+    .panel-col-top .pane-title {
         font-size: 30px;
         line-height: 1.25em;
     }
