Line height tweak for text

--- a/css/community-plans.css
+++ b/css/community-plans.css
@@ -147,7 +147,7 @@ article .article-inner .article-inner-two .field-name-field-heading > div {
     font-family: Helvetica, Helvetica, Arial, sans-serif;
     font-size: 18px !important;
     font-weight: 200;
-    line-height: 26.600000381469727px;
+    line-height: 1.5;
     margin-bottom: 0px;
     margin-left: 0px;
     margin-right: 0px;
